kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-lab
  labels:
    app.kubernetes.io/name: platform-lab
    app.kubernetes.io/instance: platform-lab
