kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-lab
  labels:
    app.kubernetes.io/name: platform-lab
    app.kubernetes.io/instance: platform-lab
    app.kubernetes.io/component: api
    app.kubernetes.io/version: "0.1.0"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: platform-lab
    app.kubernetes.io/instance: platform-lab
  ports:
    - name: http
      port: 8000
      targetPort: 8000
