kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-lab
  labels:
    app.kubernetes.io/name: platform-lab
    app.kubernetes.io/instance: platform-lab
    app.kubernetes.io/component: api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: platform-lab
      app.kubernetes.io/instance: platform-lab
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 8000
